tests/files/type_checker_tests/should_fail/211.cmdr
//Should fail if arrays are different types in ternary
x = if true then [true] else [1];